Trying to configure ssl for deploy